Stupid spelling mistake

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eviliolive-design-system",
+  "name": "evilolive-design-system",
   "version": "3.5.7",
   "description": "Vue Design System is an open-source tool for building Design Systems with Vue.js",
   "author": "viljamis <me@viljamis.com>",
